# llmdoc

./: .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
llmdoc/: __init__.py  api_v1.py  cli.py  config.py  elastic.py  llm.py  nlp.py  schema.py
models/: search-assistant.mistral
tests/: alice-wonderland.txt  happy-prince-by-oscar-wilde.txt  sherlock-holmes.txt  test-text.txt  test.txt  the-odyssey-by-homer.txt
