[tool.poetry]
authors = ["Konstantin Borovik <kb@lab5.ca>"]
description = "Document Analysis and Summarization with Large Language Model (LLM)"
name = "llmdoc"
readme = "README.md"
version = "0.1.10"

[tool.poetry.dependencies]
elasticsearch = "~8.12.0"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"}
falcon = "^3.1.3"
pydantic-settings = "~2.1.0"
python = "~3.11"
uvicorn = "^0.27.0"

[tool.poetry.scripts]
llmdoc = "llmdoc.cli:cli"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "B"]
